--- a/src/utils/l10n/uk-UA/common.json
+++ b/src/utils/l10n/uk-UA/common.json
@@ -21,5 +21,9 @@
     },
     "help_block" : {
         "to_reqs": " До реквізитів"
+    },
+    "error" : {
+        "404": "404 Error",
+        "404_message": "Ви перейшли за помилковим посиланням - такої сторінки не існує, або вона була видалена."
     }
 }
