--- a/src/utils/l10n/ru-RU/common.json
+++ b/src/utils/l10n/ru-RU/common.json
@@ -19,5 +19,9 @@
     },
     "help_block" : {
         "to_reqs": "К реквизитам"
+    },
+    "error" : {
+        "404": "404 Error",
+        "404_message": "Вы перешли по ошибочной ссылке — такой страницы не существует, или она была удалена."
     }
 }
